--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,16 @@ node_js:
 # services:
 #    - docker
 
-#addons:
-#  apt:
-#    packages:
-#      - shellcheck
-#    sources:
+addons:
+  apt:
+    sources:
+    packages:
+      - shellcheck
 
 before_install:
-#   - echo "deb http://archive.ubuntu.com/ubuntu/ wily universe" | sudo tee -a /etc/apt/sources.list
-#   - sudo apt-get update -qq
-#   - sudo apt-get install -y shellcheck
+     - echo "deb http://archive.ubuntu.com/ubuntu/ wily universe" | sudo tee -a /etc/apt/sources.list
+     - sudo apt-get update -qq
+     - sudo apt-get install -y shellcheck
 #    - docker build -t tnpi/mt6:latest .
 #    - docker run -d --name mt6 tnpi/mt6:latest /
 
@@ -22,10 +22,10 @@ install:
     - test -f mail-toaster.sh
 
 before_script:
-   - sudo curl -Lso \
-       /usr/bin/shellcheck \
-           https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.3/shellcheck
-   - sudo chmod +x /usr/bin/shellcheck
+#  - sudo curl -Lso \
+#      /usr/bin/shellcheck \
+#          https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.3/shellcheck
+#  - sudo chmod +x /usr/bin/shellcheck
 
 script:
    - sh -n *.sh
@@ -38,5 +38,3 @@ after_script:
 # required until the apt addon shellcheck is available
 sudo: required
 dist: trusty
-#os:
-#  - linux
